--- a/Practice02/demo/demo.cbp
+++ b/Practice02/demo/demo.cbp
@@ -13,6 +13,7 @@
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-g" />
+					<Add directory="include" />
 				</Compiler>
 			</Target>
 			<Target title="Release">
@@ -22,6 +23,7 @@
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-O2" />
+					<Add directory="include" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
@@ -32,10 +34,10 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
-		<Unit filename="Task01.c">
-			<Option compilerVar="CC" />
-		</Unit>
+		<Unit filename="include/Task01.h" />
 		<Unit filename="main.cpp" />
+		<Unit filename="src/Task01.cpp" />
+		<Unit filename="task01.cpp" />
 		<Extensions />
 	</Project>
 </CodeBlocks_project_file>
